--- a/contrib/debian/changelog
+++ b/contrib/debian/changelog
@@ -1,4 +1,4 @@
-Bitglobalcoin (0.4.0~dfsg-1) unstable; urgency=low
+Sficoin (0.4.0~dfsg-1) unstable; urgency=low
 
   [ Balthazar ]
   * Initial release.
