--- a/contrib/debian/manpages/novacoin.conf.5
+++ b/contrib/debian/manpages/novacoin.conf.5
@@ -1,19 +1,19 @@
-.TH Bitglobalcoin.CONF "8" "April 2013" "Bitglobalcoin.conf 3.19"
+.TH Sficoin.CONF "8" "April 2013" "Sficoin.conf 3.19"
 .SH NAME
-Bitglobalcoin.conf \- Bitglobalcoin configuration file
+Sficoin.conf \- Sficoin configuration file
 .SH SYNOPSIS
 All command-line options (except for '-datadir' and '-conf') may be specified in a configuration file, and all configuration file options may also be specified on the command line. Command-line options override values set in the configuration file.
 .TP
 The configuration file is a list of 'setting=value' pairs, one per line, with optional comments starting with the '#' character.
 .TP
-The configuration file is not automatically created; you can create it using your favorite plain-text editor. By default, Bitglobalcoind(1) will look for a file named Bitglobalcoin.conf(5) in the Bitglobalcoin data directory, but both the data directory and the configuration file path may be changed using the '-datadir' and '-conf' command-line arguments.
+The configuration file is not automatically created; you can create it using your favorite plain-text editor. By default, Sficoind(1) will look for a file named Sficoin.conf(5) in the Sficoin data directory, but both the data directory and the configuration file path may be changed using the '-datadir' and '-conf' command-line arguments.
 .SH LOCATION
-Bitglobalcoin.conf should be located in $HOME/.Bitglobalcoin
+Sficoin.conf should be located in $HOME/.Sficoin
 .SH NETWORK-RELATED SETTINGS
 .TP
 .TP
 \fBtestnet=\fR[\fI'1'\fR|\fI'0'\fR]
-Enable or disable run on the test network instead of the real *Bitglobalcoin* network.
+Enable or disable run on the test network instead of the real *Sficoin* network.
 .TP
 \fBproxy=\fR\fI'127.0.0.1:9050'\fR
 Connect via a socks4 proxy.
@@ -25,14 +25,14 @@ Use as many *addnode=* settings as you like to connect to specific peers.
 Use as many *connect=* settings as you like to connect ONLY to specific peers.
 .TP
 \fBnoirc=\fR[\fI'1'\fR|\fI'0'\fR]
-Use or Do not use Internet Relay Chat (irc.lfnet.org #Bitglobalcoin channel) to find other peers.
+Use or Do not use Internet Relay Chat (irc.lfnet.org #Sficoin channel) to find other peers.
 .TP
 \fRmaxconnections=\fR\fI'value'\fR
 Maximum number of inbound+outbound connections.
 .SH JSON-RPC OPTIONS
 .TP
 \fBserver=\fR[\fI'1'\fR|\fI'0'\fR]
-Tells *Bitglobalcoin* to accept or not accept JSON-RPC commands.
+Tells *Sficoin* to accept or not accept JSON-RPC commands.
 .TP
 \fBrpcuser=\fR\fI'username'\fR
 You must set *rpcuser* to secure the JSON-RPC api.
@@ -41,7 +41,7 @@ You must set *rpcuser* to secure the JSON-RPC api.
 You must set *rpcpassword* to secure the JSON-RPC api.
 .TP
 \fBrpctimeout=\fR\fI'30'\fR
-How many seconds *Bitglobalcoin* will wait for a complete RPC HTTP request, after the HTTP connection is established.
+How many seconds *Sficoin* will wait for a complete RPC HTTP request, after the HTTP connection is established.
 .TP
 \fBrpcallowip=\fR\fI'192.168.1.*'\fR
 By default, only RPC connections from localhost are allowed. Specify as many *rpcallowip=* settings as you like to allow connections from other hosts (and you may use * as a wildcard character).
@@ -50,10 +50,10 @@ By default, only RPC connections from localhost are allowed. Specify as many *rp
 Listen for RPC connections on this TCP port.
 .TP
 \fBrpcconnect=\fR\fI'127.0.0.1'\fR
-You can use *Bitglobalcoin* or *Bitglobalcoind(1)* to send commands to *Bitglobalcoin*/*Bitglobalcoind(1)* running on another host using this option.
+You can use *Sficoin* or *Sficoind(1)* to send commands to *Sficoin*/*Sficoind(1)* running on another host using this option.
 .TP
 \fBrpcssl=\fR\fI'1'\fR
-Use Secure Sockets Layer (also known as TLS or HTTPS) to communicate with *Bitglobalcoin* '-server' or *Bitglobalcoind(1)*. Example of OpenSSL settings used when *rpcssl*='1':
+Use Secure Sockets Layer (also known as TLS or HTTPS) to communicate with *Sficoin* '-server' or *Sficoind(1)*. Example of OpenSSL settings used when *rpcssl*='1':
 .TP
 \fBrpcsslciphers=\fR\fI'TLSv1+HIGH:!SSLv2:!aNULL:!eNULL:!AH:!3DES:@STRENGTH'\fR
 .TP
@@ -64,13 +64,13 @@ Use Secure Sockets Layer (also known as TLS or HTTPS) to communicate with *Bitgl
 .SH MISCELLANEOUS OPTIONS
 .TP
 \fBgen=\fR[\fI'0'\fR|\fI'1'\fR]
-Enable or disable attempt to generate Bitglobalcoins.
+Enable or disable attempt to generate Sficoins.
 .TP
 \fBkeypool=\fR\fI'100'\fR
 Pre-generate this many public/private key pairs, so wallet backups will be valid for both prior transactions and several dozen future transactions.
 .TP
 \fBpaytxfee=\fR\fI'0.00'\fR
-Pay an optional transaction fee every time you send Bitglobalcoins. Transactions with fees are more likely than free transactions to be included in generated blocks, so may be validated sooner.
+Pay an optional transaction fee every time you send Sficoins. Transactions with fees are more likely than free transactions to be included in generated blocks, so may be validated sooner.
 .TP
 \fBallowreceivebyip=\fR\fI'1'\fR
 Allow direct connections for the 'pay via IP address' feature.
@@ -78,12 +78,12 @@ Allow direct connections for the 'pay via IP address' feature.
 .SH USER INTERFACE OPTIONS
 .TP
 \fBmin=\fR[\fI'0'\fR|\fI'1'\fR]
-Enable or disable start Bitglobalcoind minimized.
+Enable or disable start Sficoind minimized.
 .TP
 \fBminimizetotray=\fR[\fI'0'\fR|\fI'1'\fR]
 Enable or disable minimize to the system tray.
 .SH "SEE ALSO"
-Bitglobalcoind(1)
+Sficoind(1)
 .SH AUTHOR
 This manual page was written by Micah Anderson <micah@debian.org> for the Debian system (but may be used by others). Permission is granted to copy, distribute and/or modify this document under the terms of the GNU General Public License, Version 3 or any later version published by the Free Software Foundation.
 
