--- a/contrib/debian/manpages/novacoind.1
+++ b/contrib/debian/manpages/novacoind.1
@@ -1,19 +1,19 @@
-.TH BitglobalcoinD "7" "April 2013" "Bitglobalcoind 3.19" 
+.TH SficoinD "7" "April 2013" "Sficoind 3.19" 
 .SH NAME
-Bitglobalcoind \- peer-to-peer network based digital currency
+Sficoind \- peer-to-peer network based digital currency
 .SH SYNOPSIS
-Bitglobalcoin [options] <command> [params]  
+Sficoin [options] <command> [params]  
 .TP
-Bitglobalcoin [options] help <command> - Get help for a command
+Sficoin [options] help <command> - Get help for a command
 .SH DESCRIPTION
-This  manual page documents the Bitglobalcoind program. Bitglobalcoin is a peer-to-peer digital currency. Peer-to-peer (P2P) means that there is no central authority to issue new money or keep track of transactions. Instead, these tasks are managed collectively by the nodes of the network. Advantages:
+This  manual page documents the Sficoind program. Sficoin is a peer-to-peer digital currency. Peer-to-peer (P2P) means that there is no central authority to issue new money or keep track of transactions. Instead, these tasks are managed collectively by the nodes of the network. Advantages:
 
-Bitglobalcoins can be sent easily through the Internet, without having to trust middlemen. Transactions are designed to be irreversible. Be safe from instability caused by fractional reserve banking and central banks. The limited inflation of the Bitglobalcoin system’s money supply is distributed evenly (by CPU power) throughout the network, not monopolized by banks.
+Sficoins can be sent easily through the Internet, without having to trust middlemen. Transactions are designed to be irreversible. Be safe from instability caused by fractional reserve banking and central banks. The limited inflation of the Sficoin system’s money supply is distributed evenly (by CPU power) throughout the network, not monopolized by banks.
 
 .SH OPTIONS
 .TP
 \fB\-conf=\fR<file>
-Specify configuration file (default: Bitglobalcoin.conf)
+Specify configuration file (default: Sficoin.conf)
 .TP
 \fB\-gen\fR
 Generate coins
@@ -84,14 +84,14 @@ This help message
 \fBbackupwallet 'destination'\fR
 Safely copies *wallet.dat* to 'destination', which can be a directory or a path with filename.
 .TP
-\fBgetaccount 'Bitglobalcoinaddress'\fR
+\fBgetaccount 'Sficoinaddress'\fR
 Returns the account associated with the given address.
 .TP
-\fBsetaccount 'Bitglobalcoinaddress' ['account']\fR
+\fBsetaccount 'Sficoinaddress' ['account']\fR
 Sets the ['account'] associated with the given address. ['account'] may be omitted to remove an address from ['account'].
 .TP
 \fBgetaccountaddress 'account'\fR
-Returns a new Bitglobalcoin address for 'account'.
+Returns a new Sficoin address for 'account'.
 .TP
 \fBgetaddressesbyaccount 'account'\fR
 Returns the list of addresses associated with the given 'account'.
@@ -112,7 +112,7 @@ Returns the number of connections to other nodes.
 Returns the proof-of-work difficulty as a multiple of the minimum difficulty.
 .TP
 \fBgetgenerate\fR
-Returns boolean true if server is trying to generate Bitglobalcoins, false otherwise.
+Returns boolean true if server is trying to generate Sficoins, false otherwise.
 .TP
 \fBsetgenerate 'generate' ['genproclimit']\fR
 Generation is limited to ['genproclimit'] processors, -1 is unlimited.
@@ -124,13 +124,13 @@ Returns a recent hashes per second performance measurement while generating.
 Returns an object containing server information.
 .TP
 \fBgetnewaddress 'account'\fR
-Returns a new Bitglobalcoin address for receiving payments. If 'account' is specified (recommended), it is added to the address book so payments received with the address will be credited to 'account'.
+Returns a new Sficoin address for receiving payments. If 'account' is specified (recommended), it is added to the address book so payments received with the address will be credited to 'account'.
 .TP
 \fBgetreceivedbyaccount 'account' ['minconf=1']\fR
 Returns the total amount received by addresses associated with 'account' in transactions with at least ['minconf'] confirmations.
 .TP
-\fBgetreceivedbyaddress 'Bitglobalcoinaddress' ['minconf=1']\fR
-Returns the total amount received by 'Bitglobalcoinaddress' in transactions with at least ['minconf'] confirmations.
+\fBgetreceivedbyaddress 'Sficoinaddress' ['minconf=1']\fR
+Returns the total amount received by 'Sficoinaddress' in transactions with at least ['minconf'] confirmations.
 .TP
 \fBgettransaction 'txid'\fR
 Returns information about a specific transaction, given hexadecimal transaction ID.
@@ -179,26 +179,26 @@ Returns a list of the last ['count'] transactions for 'account' - for all accoun
 \fBmove <'fromaccount'> <'toaccount'> <'amount'> ['minconf=1'] ['comment']\fR
 Moves funds between accounts.
 .TP
-\fBsendfrom* <'account'> <'Bitglobalcoinaddress'> <'amount'> ['minconf=1'] ['comment'] ['comment-to']\fR
-Sends amount from account's balance to 'Bitglobalcoinaddress'. This method will fail if there is less than amount Bitglobalcoins with ['minconf'] confirmations in the account's balance (unless account is the empty-string-named default account; it behaves like the *sendtoaddress* method). Returns transaction ID on success.
+\fBsendfrom* <'account'> <'Sficoinaddress'> <'amount'> ['minconf=1'] ['comment'] ['comment-to']\fR
+Sends amount from account's balance to 'Sficoinaddress'. This method will fail if there is less than amount Sficoins with ['minconf'] confirmations in the account's balance (unless account is the empty-string-named default account; it behaves like the *sendtoaddress* method). Returns transaction ID on success.
 .TP     
-\fBsendtoaddress 'Bitglobalcoinaddress' 'amount' ['comment'] ['comment-to']\fR
-Sends amount from the server's available balance to 'Bitglobalcoinaddress'. amount is a real and is rounded to the nearest 0.01. Returns transaction id on success.
+\fBsendtoaddress 'Sficoinaddress' 'amount' ['comment'] ['comment-to']\fR
+Sends amount from the server's available balance to 'Sficoinaddress'. amount is a real and is rounded to the nearest 0.01. Returns transaction id on success.
 .TP    
 \fBstop\fR
-Stops the Bitglobalcoin server.
+Stops the Sficoin server.
 .TP    
-\fBvalidateaddress 'Bitglobalcoinaddress'\fR
-Checks that 'Bitglobalcoinaddress' looks like a proper Bitglobalcoin address. Returns an object containing:
+\fBvalidateaddress 'Sficoinaddress'\fR
+Checks that 'Sficoinaddress' looks like a proper Sficoin address. Returns an object containing:
 
     "isvalid" : true or false.
     "ismine"  : true if the address is in the server's wallet.
-    "address" : Bitglobalcoinaddress.
+    "address" : Sficoinaddress.
 
     *note: ismine and address are only returned if the address is valid.
 
 .SH "SEE ALSO"
-Bitglobalcoin.conf(5)
+Sficoin.conf(5)
 .SH AUTHOR
 This manual page was written by Micah Anderson <micah@debian.org> for the Debian system (but may be used by others). Permission is granted to copy, distribute and/or modify this document under the terms of the GNU General Public License, Version 3 or any later version published by the Free Software Foundation.
 
